syntax = "proto3";
package touchpad.v1;

// 主消息：一条网络包只含一个 TouchPacket
message TouchPacket {
  //---- 头部（必须存在，8 byte 以内） ----//
  int64 ts_ms = 1; // 手机开机毫秒，用于乱序重排 & 延迟计算
  uint32 seq = 2; // 自增序列号，方便丢包统计

  //---- 业务数据 ----//
  repeated Pointer pointers = 3; // 多点触控，通常 1-5 个

  //---- 扩展预留 ----//
  bytes reserved = 15; // 自定义扩展，暂时留空
}

// 单点信息
message Pointer {
  int32 id = 1;
  uint32 abs_x = 2;
  uint32 abs_y = 3;
  TouchEventType event_type = 4;
}

enum TouchEventType {
  TOUCH_EVENT_TYPE_UNSPECIFIED = 0;
  TOUCH_EVENT_TYPE_DOWN = 1;
  TOUCH_EVENT_TYPE_UP = 2;
  TOUCH_EVENT_TYPE_MOVE = 3;
  TOUCH_EVENT_TYPE_CANCEL = 4;
}
